v3: New config structure, built-in Velocity packet handling (#196)
* build: bump to 2.8

* build: require Java 17, 1.17.1+ on Spigot

* build: publish platform-specific APIs

* build: velocity build pipeline refactor

* refactor: move stuff around, Player -> OnlineUser

* build: minimize jars

* build: update dependabot config

* build: fix version targets in CI flows

* refactor: migrate config files to Exll's configlib

* refactor: more signed chat R&D

* feat: add packet-level chat handling support

* deps: bump ConfigLib to 4.5.0

* feat: add Regex filter, close #188

* deps: bump Spicord

* fix: license headers

* deps: bump ProfanityCheckerAPI to v3.0