@@ -19,714 +19,286 @@
 
 package net.william278.huskchat.config;
 
-import dev.dejvokep.boostedyaml.YamlDocument;
-import dev.dejvokep.boostedyaml.block.implementation.Section;
+import de.exlll.configlib.Comment;
+import de.exlll.configlib.Configuration;
+import lombok.AccessLevel;
+import lombok.AllArgsConstructor;
+import lombok.Getter;
+import lombok.NoArgsConstructor;
 import net.william278.huskchat.channel.Channel;
-import net.william278.huskchat.discord.WebHook;
-import net.william278.huskchat.filter.*;
-import net.william278.huskchat.replacer.EmojiReplacer;
+import net.william278.huskchat.discord.DiscordHook;
 import org.jetbrains.annotations.NotNull;
+import org.jetbrains.annotations.Unmodifiable;
 
-import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
-import java.util.*;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
 
 /**
- * Class for loading and storing plugin settings and {@link Channel channels}
+ * Class for loading and storing plugin settings
  */
+@SuppressWarnings("FieldMayBeFinal")
+@Getter
+@Configuration
+@NoArgsConstructor(access = AccessLevel.PRIVATE)
 public class Settings {
 
-    // Top level options
-    private String language;
-    private boolean checkForUpdates;
+    static final String CONFIG_HEADER = """
+            ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
+            ┃       HuskChat - Config      ┃
+            ┃    Developed by William278   ┃
+            ┣━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
+            ┣╸ Information: https://william278.net/project/huskchat/
+            ┣╸ Config Help: https://william278.net/docs/huskchat/config-files/
+            ┗╸ Documentation: https://william278.net/docs/huskchat/""";
 
+    @Comment("Locale of the default language file to use. Docs: https://william278.net/docs/huskclaims/translations")
+    private String language = Locales.DEFAULT_LOCALE;
 
-    // Placeholder support
-    private boolean doPlaceholderAPI;
-    private long papiProxyBridgeCacheTime;
+    @Comment("Whether to automatically check for plugin updates on startup")
+    private boolean checkForUpdates = true;
 
+    @Comment("Whether to handle chat packets directly for better 1.19+ support (may cause rare compatibility issues)")
+    private boolean usePacketListening = true;
 
-    // Channel config
-    private String defaultChannel;
-    private HashMap<String, String> serverDefaultChannels;
-    private HashMap<String, Channel> channels;
-    private String channelLogFormat;
-    private List<String> channelCommandAliases;
+    @Comment("Placeholder settings")
+    private PlaceholderSettings placeholder = new PlaceholderSettings();
 
+    @Getter
+    @Configuration
+    @NoArgsConstructor(access = AccessLevel.PRIVATE)
+    public static class PlaceholderSettings {
+        @Comment("Use PlaceholderAPI. If you're on Bungee/Velocity, this requires PAPIProxyBridge installed")
+        private boolean usePapi = true;
 
-    // Message command config
-    private boolean doMessageCommand;
-    private boolean doGroupMessages;
-    private int maxGroupMessageSize;
-    private List<String> messageCommandAliases;
-    private List<String> replyCommandAliases;
-    private String inboundMessageFormat;
-    private String outboundMessageFormat;
-    private String groupInboundMessageFormat;
-    private String groupOutboundMessageFormat;
-    private boolean logPrivateMessages;
-    private boolean censorPrivateMessages;
-    private String messageLogFormat;
-    private List<String> messageCommandRestrictedServers;
-
-    // Social spy
-    private boolean doSocialSpyCommand;
-    private String socialSpyFormat;
-    private String socialSpyGroupFormat;
-    private List<String> socialSpyCommandAliases;
-
-
-    // Local spy
-    private boolean doLocalSpyCommand;
-    private String localSpyFormat;
-    private List<String> excludedLocalSpyChannels;
-    private List<String> localSpyCommandAliases;
-
-
-    // Broadcast command
-    private boolean doBroadcastCommand;
-    private List<String> broadcastCommandAliases;
-    private String broadcastMessageFormat;
-    private boolean logBroadcasts;
-    private String broadcastLogFormat;
-
-
-    // Chat filters
-    private Map<String, List<ChatFilter>> chatFilters;
-
-    // Join and Quit messages
-    private boolean doJoinMessages;
-    private String joinMessageFormat;
-    private boolean doQuitMessages;
-    private String quitMessageFormat;
-    private Channel.BroadcastScope joinQuitBroadcastScope;
-
-
-    // Discord integration
-    private boolean doDiscordIntegration;
-    private Map<String, URL> webhookUrls;
-    private WebHook.Format webhookFormat;
-    private boolean useSpicord;
-    private String discordUsernameFormat;
-    private Map<String, String> spicordReceiveChannelMap;
-    private Map<String, String> spicordSendChannelMap;
-
-    // Server names
-    private Map<String, String> serverNameReplacement;
-
-
-    public Settings(@NotNull YamlDocument configFile) {
-        this.loadConfig(configFile);
+        @Comment("If using PAPIProxyBridge, how long to cache placeholders for (in milliseconds)")
+        private long cacheTime = 3000;
     }
 
-    private void loadConfig(@NotNull YamlDocument configFile) {
-        // Language file
-        language = configFile.getString("language", "en-gb");
-        checkForUpdates = configFile.getBoolean("check_for_updates", true);
+    @Comment("Message comamnd settings")
+    private MessageSettings messageCommand = new MessageSettings();
 
-        // Placeholders
-        doPlaceholderAPI = configFile.getBoolean("placeholders.use_papi", true);
-        papiProxyBridgeCacheTime = configFile.getLong("placeholders.cache_time", 1000L);
+    @Getter
+    @Configuration
+    @NoArgsConstructor(access = AccessLevel.PRIVATE)
+    public static class MessageSettings {
+        @Comment("Whether to enable the /msg command")
+        private boolean enabled = true;
 
-        // Channels
-        defaultChannel = configFile.getString("default_channel", "global");
-        channelLogFormat = configFile.getString("channel_log_format", "[CHAT] [%channel%] %sender%: ");
-        channels = new LinkedHashMap<>();
-        channels.putAll(fetchChannels(configFile));
-        serverDefaultChannels = getServerDefaultChannels(configFile);
-        channelCommandAliases = (configFile.contains("channel_command_aliases")) ?
-                getCommandsFromList(configFile.getStringList("channel_command_aliases")) :
-                Collections.singletonList("channel");
+        @Comment("List of command aliases for /msg")
+        @Getter(AccessLevel.NONE)
+        private List<String> msgAliases = List.of("/msg", "/m", "/tell", "/whisper", "/w", "/pm");
 
-        // Message command options
-        doMessageCommand = configFile.getBoolean("message_command.enabled", true);
-        doGroupMessages = configFile.getBoolean("message_command.group_messages.enabled", true);
-        maxGroupMessageSize = configFile.getInt("message_command.group_messages.max_size", 5);
-        inboundMessageFormat = configFile.getString("message_command.format.inbound",
-                "&#00fb9a&%name% &8→ &#00fb9a&You&8: &f");
-        outboundMessageFormat = configFile.getString("message_command.format.outbound",
-                "&#00fb9a&You &8→ &#00fb9a&%name%&8 &f");
-        groupInboundMessageFormat = configFile.getString("message_command.format.group_inbound",
-                "&#00fb9a&%name% &8→ &#00fb9a&You[₍₊%group_amount_subscript%₎](gray show_text=&7%group_members%)&8: &f");
-        groupOutboundMessageFormat = configFile.getString("message_command.format.group_outbound",
-                "&#00fb9a&You &8→ &#00fb9a&%name%[₍₊%group_amount_subscript%₎](gray show_text=&7%group_members%)&8: &f");
-        logPrivateMessages = configFile.getBoolean("message_command.log_to_console", true);
-        censorPrivateMessages = configFile.getBoolean("message_command.censor", false);
-        messageLogFormat = configFile.getString("message_command.log_format", "[MSG] [%sender% -> %receiver%]: ");
-        messageCommandRestrictedServers = configFile.getStringList("message_command.restricted_servers");
-        messageCommandAliases = (configFile.contains("message_command.msg_aliases")) ?
-                getCommandsFromList(configFile.getStringList("message_command.msg_aliases")) :
-                Collections.singletonList("msg");
-        replyCommandAliases = new ArrayList<>();
-        replyCommandAliases = (configFile.contains("message_command.reply_aliases")) ?
-                getCommandsFromList(configFile.getStringList("message_command.reply_aliases")) :
-                Collections.singletonList("reply");
+        @Comment("List of command aliases for /reply")
+        @Getter(AccessLevel.NONE)
+        private List<String> replyAliases = List.of("/reply", "/r");
 
-        // Social spy
-        doSocialSpyCommand = configFile.getBoolean("social_spy.enabled", true);
-        socialSpyFormat = configFile.getString("social_spy.format", "&e[Spy] &7%sender% &8→ &7%receiver%:%spy_color% ");
-        socialSpyGroupFormat = configFile.getString("social_spy.group_format", "&e[Spy] &7%name% &8→ &7%receiver_name%[₍₊%group_amount_subscript%₎](gray show_text=&7%group_members%):%spy_color% ");
-        socialSpyCommandAliases = (configFile.contains("social_spy.socialspy_aliases")) ?
-                getCommandsFromList(configFile.getStringList("social_spy.socialspy_aliases")) :
-                Collections.singletonList("socialspy");
+        @Comment("Whether to apply censorship filters on private messages")
+        private boolean censor = false;
 
-        // Local spy
-        doLocalSpyCommand = configFile.getBoolean("local_spy.enabled", true);
-        localSpyFormat = configFile.getString("local_spy.format", "&e[Spy] &7[%channel%] %name%&8:%spy_color% ");
-        excludedLocalSpyChannels = (configFile.contains("local_spy.excluded_local_channels")) ? configFile.getStringList("local_spy.excluded_local_channels") : new ArrayList<>();
-        localSpyCommandAliases = (configFile.contains("local_spy.localspy_aliases")) ?
-                getCommandsFromList(configFile.getStringList("local_spy.localspy_aliases")) :
-                Collections.singletonList("localspy");
+        @Comment("Whether to log private messages to the console")
+        private boolean logToConsole = true;
 
-        // Broadcast command
-        doBroadcastCommand = configFile.getBoolean("broadcast_command.enabled", true);
-        broadcastCommandAliases = (configFile.contains("broadcast_command.broadcast_aliases")) ?
-                getCommandsFromList(configFile.getStringList("broadcast_command.broadcast_aliases")) :
-                Collections.singletonList("broadcast");
-        broadcastMessageFormat = configFile.getString("broadcast_command.format", "&6[Broadcast]&e ");
-        logBroadcasts = configFile.getBoolean("broadcast_command.log_to_console", true);
-        broadcastLogFormat = configFile.getString("broadcast_command.log_format", "[BROADCAST]: ");
+        @Comment("Logging format for private messages")
+        private String logFormat = "[MSG] [%sender% -> %receiver%]: ";
 
-        // Chat filters
-        chatFilters = fetchChatFilters(configFile);
+        @Comment("Group private message settings")
+        private GroupSettings groupMessages = new GroupSettings();
 
-        // Join and Quit messages
-        doJoinMessages = configFile.getBoolean("join_and_quit_messages.join.enabled", false);
-        joinMessageFormat = configFile.getString("join_and_quit_messages.join.format", "&e%name% joined the network");
-        doQuitMessages = configFile.getBoolean("join_and_quit_messages.quit.enabled", false);
-        quitMessageFormat = configFile.getString("join_and_quit_messages.quit.format", "&e%name% left the network");
-        joinQuitBroadcastScope = Channel.BroadcastScope.valueOf(configFile.getString("join_and_quit_messages.broadcast_scope", "GLOBAL").toUpperCase(Locale.ENGLISH));
+        @Getter
+        @Configuration
+        @NoArgsConstructor(access = AccessLevel.PRIVATE)
+        public static class GroupSettings {
+            @Comment("Whether to enable group private messages (/msg Player1,Player2,...)")
+            private boolean enabled = true;
 
-        // Discord integration
-        webhookFormat = WebHook.Format.getMessageFormat(configFile.getString("discord.format_style", "inline"))
-                .orElse(WebHook.Format.INLINE);
-        webhookUrls = fetchWebhookUrls(configFile);
-        doDiscordIntegration = configFile.getBoolean("discord.enabled", false);
-        useSpicord = configFile.getBoolean("discord.spicord.enabled", true);
-        discordUsernameFormat = configFile.getString("discord.username_format", "@%discord_handle%");
-        spicordReceiveChannelMap = new LinkedHashMap<>();
-        if (configFile.contains("discord.spicord.receive_channel_map")) {
-            for (String channelID : configFile.getSection("discord.spicord.receive_channel_map").getRoutesAsStrings(false)) {
-                spicordReceiveChannelMap.put(channelID, configFile.getString("discord.spicord.receive_channel_map." + channelID));
-            }
-        }
-        spicordSendChannelMap = new LinkedHashMap<>();
-        if (configFile.contains("discord.spicord.send_channel_map")) {
-            for (String channelID : configFile.getSection("discord.spicord.send_channel_map").getRoutesAsStrings(false)) {
-                spicordSendChannelMap.put(channelID, configFile.getString("discord.spicord.send_channel_map." + channelID));
-            }
+            @Comment("Maximum amount of players in a group message")
+            private int maxSize = 10;
         }
 
-        // Server name replacement
-        serverNameReplacement = new LinkedHashMap<>();
-        Section serverNameReplacementSection = configFile.getSection("server_name_replacement");
-        if (serverNameReplacementSection != null) {
-            for (String s : serverNameReplacementSection.getRoutesAsStrings(false)) {
-                serverNameReplacement.put(s, serverNameReplacementSection.getString(s));
-            }
+        @Comment("Formats for private messages (uses MineDown)")
+        private MessageFormat format = new MessageFormat();
+
+        @Getter
+        @Configuration
+        @NoArgsConstructor(access = AccessLevel.PRIVATE)
+        public static class MessageFormat {
+            private String inbound = "&e&l%name% &8→ &e&lYou&8: &f";
+            private String outbound = "&e&lYou &8→ &e&l%name%&8: &f";
+            private String groupInbound = "&e&l%name% &8→ &e&lYou[₍₊%group_amount_subscript%₎](gray show_text=&7%group_members%)&8: &f";
+            private String groupOutbound = "&e&lYou &8→ &e&l%name%[₍₊%group_amount_subscript%₎](gray show_text=&7%group_members%)&8: &f";
+        }
+
+        @Comment("(Bungee/Velocity only) List of servers where private messages cannot be sent")
+        private List<String> restrictedServers = List.of();
+
+        @NotNull
+        public List<String> getMsgAliases() {
+            return formatCommands(msgAliases);
+        }
+
+        @NotNull
+        public List<String> getReplyAliases() {
+            return formatCommands(replyAliases);
+        }
+
+
+    }
+
+    @Comment("Social spy settings (see other users' private messages)")
+    private SocialSpySettings socialSpy = new SocialSpySettings();
+
+    @Getter
+    @Configuration
+    @NoArgsConstructor(access = AccessLevel.PRIVATE)
+    @AllArgsConstructor(access = AccessLevel.PRIVATE)
+    public static class SocialSpySettings {
+        private boolean enabled = true;
+        private String format = "&e[Spy] &7%name% &8→ &7%receiver_name%:%spy_color% ";
+        private String groupFormat = "&e[Spy] &7%name% &8→ &7%receiver_name% [₍₊%group_amount_subscript%₎](gray show_text=&7%group_members% suggest_command=/msg %group_members_comma_separated% ):%spy_color% ";
+        @Getter(AccessLevel.NONE)
+        private List<String> socialspyAliases = List.of("/socialspy", "/ss");
+
+        @NotNull
+        public List<String> getSocialspyAliases() {
+            return formatCommands(socialspyAliases);
         }
     }
 
-    /**
-     * Returns {@link Channel} data from the proxy {@link YamlDocument}
-     *
-     * @param configFile The proxy {@link YamlDocument}
-     * @return {@link HashMap} of {@link Channel} data listed in the config file
-     * @throws IllegalArgumentException if a channel contains an invalid broadcast scope
-     */
-    private HashMap<String, Channel> fetchChannels(YamlDocument configFile) throws IllegalArgumentException {
-        final HashMap<String, Channel> channels = new HashMap<>();
-        for (String channelID : configFile.getSection("channels").getRoutesAsStrings(false)) {
-            // Get channel format and scope and create channel object
-            final String format = configFile.getString("channels." + channelID + ".format", "%fullname%&r: ");
-            final String broadcastScope = configFile.getString("channels." + channelID + ".broadcast_scope", "GLOBAL").toUpperCase();
-            Channel channel = new Channel(channelID.toLowerCase(), format, Channel.BroadcastScope.valueOf(broadcastScope));
 
-            // Read shortcut commands
-            if (configFile.contains("channels." + channelID + ".shortcut_commands")) {
-                channel.setShortcutCommands(getCommandsFromList(configFile.getStringList("channels." + channelID + ".shortcut_commands")));
-            }
+    @Comment("(Bungee/Velocity only) Local spy settings (see local messages on other servers)")
+    private LocalSpySettings localSpy = new LocalSpySettings();
 
-            // Read shortcut commands
-            if (configFile.contains("channels." + channelID + ".restricted_servers")) {
-                channel.setRestrictedServers(configFile.getStringList("channels." + channelID + ".restricted_servers"));
-            }
+    @Getter
+    @Configuration
+    @NoArgsConstructor(access = AccessLevel.PRIVATE)
+    @AllArgsConstructor(access = AccessLevel.PRIVATE)
+    public static class LocalSpySettings {
+        private boolean enabled = true;
+        private String format = "&e[Spy] &7%name% &8→ &7%receiver_name%:%spy_color% ";
+        @Getter(AccessLevel.NONE)
+        private List<String> localspyAliases = List.of("/socialspy", "/ss");
+        @Comment("List of channels to exclude from local spy")
+        private List<String> excludedLocalChannels = List.of();
 
-            // Read optional parameters
-            channel.setSendPermission(configFile.getString("channels." + channelID + ".permissions.send", null));
-            channel.setReceivePermission(configFile.getString("channels." + channelID + ".permissions.receive", null));
-            channel.setLogMessages(configFile.getBoolean("channels." + channelID + ".log_to_console", true));
-            channel.setFilter(configFile.getBoolean("channels." + channelID + ".filtered", true));
-
-            channels.put(channelID, channel);
+        @NotNull
+        public List<String> getLocalspyAliases() {
+            return formatCommands(localspyAliases);
         }
-        return channels;
     }
 
-    /**
-     * Returns a {@link Set} of {@link ChatFilter}s to use for filtering chat messages
-     *
-     * @param configFile The proxy {@link YamlDocument}
-     * @return {@link ChatFilter}s to use
-     */
-    private Map<String, List<ChatFilter>> fetchChatFilters(YamlDocument configFile) {
-        Map<String, List<ChatFilter>> filters = new HashMap<>();
-        clearChatFilters(); // Clear and dispose of any existing ProfanityChecker instances
+    @Comment("Broadcast command settings")
+    private BroadcastSettings broadcastCommand = new BroadcastSettings();
 
-        for (String channelID : configFile.getSection("channels").getRoutesAsStrings(false)) {
-            filters.put(channelID, new ArrayList<>());
+    @Getter
+    @Configuration
+    @NoArgsConstructor(access = AccessLevel.PRIVATE)
+    public static class BroadcastSettings {
+        private boolean enabled = true;
+        @Getter(AccessLevel.NONE)
+        private List<String> broadcastAliases = List.of("/broadcast", "/alert");
+        private String format = "&6[Broadcast]&e ";
+        private boolean logToConsole = true;
+        private String logFormat = "[BROADCAST]: ";
+
+        @NotNull
+        public List<String> getBroadcastAliases() {
+            return formatCommands(broadcastAliases);
+        }
+    }
+
+    @Comment("Join and quit message settings")
+    private JoinQuitSettings joinAndQuitMessages = new JoinQuitSettings();
+
+    @Getter
+    @Configuration
+    @NoArgsConstructor(access = AccessLevel.PRIVATE)
+    public static class JoinQuitSettings {
+
+        @Comment({"Use the \"huskchat.join_message.[text]\" permission to override this.",
+                "Use the \"huskchat.silent_join\" permission to silence for a user."})
+        private ConnectionMessage join = new ConnectionMessage(true, "&e%name% joined the network");
+
+        @Comment({"Use the \"huskchat.quit_message.[text]\" permission to override this.",
+                "Use the \"huskchat.silent_quit\" permission to silence for a user."})
+        private ConnectionMessage quit = new ConnectionMessage(true, "&e%name% left the network");
+
+        @Comment("Note that on Velocity/Bungee, PASSTHROUGH modes won't cancel local join/quit messages")
+        private Channel.BroadcastScope broadcastScope = Channel.BroadcastScope.GLOBAL;
+
+        @Getter
+        @Configuration
+        @NoArgsConstructor(access = AccessLevel.PRIVATE)
+        @AllArgsConstructor(access = AccessLevel.PRIVATE)
+        public static class ConnectionMessage {
+            private boolean enabled;
+            private String format;
+        }
+    }
+
+    @Comment("Discord integration settings. Docs: https://william278.net/docs/huskchat/discord-hook")
+    private DiscordSettings discord = new DiscordSettings();
+
+    @Getter
+    @Configuration
+    @NoArgsConstructor(access = AccessLevel.PRIVATE)
+    public static class DiscordSettings {
+        @Comment("Enable hooking into Discord via Webhooks and/or Spicord")
+        private boolean enabled = false;
+
+        @Comment("Discord message format style (INLINE or EMBEDDED)")
+        private DiscordHook.Format formatStyle = DiscordHook.Format.INLINE;
+
+        @Comment("Send messages in channels to a webhook by mapped URL")
+        @Getter(AccessLevel.NONE)
+        private Map<String, String> channelWebhooks = new HashMap<>();
+
+        @Comment("Whether to hook into Spicord for two-way chat")
+        private SpicordSettings spicord = new SpicordSettings();
+
+        @Getter
+        @Configuration
+        @NoArgsConstructor(access = AccessLevel.PRIVATE)
+        public static class SpicordSettings {
+            @Comment("Requires Spicord installed and \"huskchat\" added to the \"addons\" in config.toml")
+            private boolean enabled = true;
+
+            @Comment("Format of Discord users in-game. Note this doesn't support other placeholders")
+            private String usernameFormat = "@%discord_handle%";
+
+            @Comment("Send in-game messages on these channels to a specified Discord channel (by numeric ID)")
+            private Map<String, String> receiveChannelMap = new HashMap<>(Map.of(
+                    "global", "123456789012345678"
+            ));
+
+            @Comment("Send Discord messages on these channels (by numeric ID) to a specified in-game channel")
+            private Map<String, String> sendChannelMap = new HashMap<>(Map.of(
+                    "123456789012345678", "global"
+            ));
         }
 
-        filters.put("private_messages", new ArrayList<>());
-        filters.put("broadcast_messages", new ArrayList<>());
-
-        // Filters
-        if (configFile.getBoolean("chat_filters.advertising_filter.enabled", true)) {
-            List<String> channels = configFile.getStringList("chat_filters.advertising_filter.channels");
-
-            if (configFile.getBoolean("chat_filters.advertising_filter.private_messages", false)) {
-                channels.add("private_messages");
-            }
-
-            if (configFile.getBoolean("chat_filters.advertising_filter.broadcast_messages", false)) {
-                channels.add("broadcast_messages");
-            }
-
-            for (String channel : channels) {
-                if (!filters.containsKey(channel)) continue;
-                filters.get(channel).add(new AdvertisingFilterer());
-            }
-        }
-        if (configFile.getBoolean("chat_filters.caps_filter.enabled", true)) {
-            List<String> channels = configFile.getStringList("chat_filters.caps_filter.channels");
-
-            if (configFile.getBoolean("chat_filters.caps_filter.private_messages", false)) {
-                channels.add("private_messages");
-            }
-
-            if (configFile.getBoolean("chat_filters.caps_filter.broadcast_messages", false)) {
-                channels.add("broadcast_messages");
-            }
-
-            for (String channel : channels) {
-                if (!filters.containsKey(channel)) continue;
-                filters.get(channel).add(new CapsFilter(configFile.getDouble("chat_filters.caps_filter.max_caps_percentage", 0.4)));
-            }
-        }
-        if (configFile.getBoolean("chat_filters.spam_filter.enabled", true)) {
-            List<String> channels = configFile.getStringList("chat_filters.spam_filter.channels");
-
-            if (configFile.getBoolean("chat_filters.spam_filter.private_messages", false)) {
-                channels.add("private_messages");
-            }
-
-            if (configFile.getBoolean("chat_filters.spam_filter.broadcast_messages", false)) {
-                channels.add("broadcast_messages");
-            }
-
-            for (String channel : channels) {
-                if (!filters.containsKey(channel)) continue;
-                filters.get(channel).add(new SpamFilter(configFile.getInt("chat_filters.spam_filter.period_seconds", 4),
-                        configFile.getInt("chat_filters.spam_filter.messages_per_period", 3)));
-            }
-        }
-        if (configFile.getBoolean("chat_filters.repeat_filter.enabled", true)) {
-            List<String> channels = configFile.getStringList("chat_filters.repeat_filter.channels");
-
-            if (configFile.getBoolean("chat_filters.repeat_filter.private_messages", false)) {
-                channels.add("private_messages");
-            }
-
-            if (configFile.getBoolean("chat_filters.repeat_filter.broadcast_messages", false)) {
-                channels.add("broadcast_messages");
-            }
-
-            for (String channel : channels) {
-                if (!filters.containsKey(channel)) continue;
-                filters.get(channel).add(new RepeatFilter(configFile.getInt("chat_filters.repeat_filter.previous_messages_to_check", 2)));
-            }
-        }
-        if (configFile.getBoolean("chat_filters.profanity_filter.enabled", false)) {
-            List<String> channels = configFile.getStringList("chat_filters.profanity_filter.channels");
-
-            if (configFile.getBoolean("chat_filters.profanity_filter.private_messages", false)) {
-                channels.add("private_messages");
-            }
-
-            if (configFile.getBoolean("chat_filters.profanity_filter.broadcast_messages", false)) {
-                channels.add("broadcast_messages");
-            }
-
-            for (String channel : channels) {
-                if (!filters.containsKey(channel)) continue;
-                filters.get(channel).add(new ProfanityFilterer(ProfanityFilterer.ProfanityFilterMode.valueOf(
-                        configFile.getString("chat_filters.profanity_filter.mode", "TOLERANCE").toUpperCase()),
-                        configFile.getDouble("chat_filters.profanity_filter.tolerance", 0.78d),
-                        configFile.getString("chat_filters.profanity_filter.library_path", "")));
-            }
-        }
-        if (configFile.getBoolean("chat_filters.ascii_filter.enabled", false)) {
-            List<String> channels = configFile.getStringList("chat_filters.ascii_filter.channels");
-
-            if (configFile.getBoolean("chat_filters.ascii_filter.private_messages", false)) {
-                channels.add("private_messages");
-            }
-
-            if (configFile.getBoolean("chat_filters.ascii_filter.broadcast_messages", false)) {
-                channels.add("broadcast_messages");
-            }
-
-            for (String channel : channels) {
-                if (!filters.containsKey(channel)) continue;
-                filters.get(channel).add(new AsciiFilter());
-            }
-        }
-
-        // Replacers
-        if (configFile.getBoolean("message_replacers.emoji_replacer.enabled", true)) {
-            HashMap<String, String> emojiSequences = new HashMap<>();
-            boolean caseInsensitive = configFile.getBoolean("message_replacers.emoji_replacer.case_insensitive", false);
-            for (String characters : configFile.getSection("message_replacers.emoji_replacer.emoji").getRoutesAsStrings(false)) {
-                if (!caseInsensitive) {
-                    emojiSequences.put(characters, configFile.getString("message_replacers.emoji_replacer.emoji." + characters));
-                } else {
-                    emojiSequences.put(characters.toLowerCase(Locale.ROOT), configFile.getString("message_replacers.emoji_replacer.emoji." + characters));
+        @NotNull
+        @Unmodifiable
+        public Map<String, URL> getChannelWebhooks() throws IllegalStateException {
+            final Map<String, URL> webhookMap = new HashMap<>();
+            for (String channel : channelWebhooks.keySet()) {
+                try {
+                    webhookMap.put(channel, new URI(channelWebhooks.get(channel)).toURL());
+                } catch (Throwable e) {
+                    throw new IllegalStateException("Invalid URL for Discord webhook: " + channelWebhooks.get(channel));
                 }
             }
-
-            List<String> channels = configFile.getStringList("message_replacers.emoji_replacer.channels");
-
-            if (configFile.getBoolean("chat_filters.emoji_replacer.private_messages", true)) {
-                channels.add("private_messages");
-            }
-
-            if (configFile.getBoolean("chat_filters.emoji_replacer.broadcast_messages", true)) {
-                channels.add("broadcast_messages");
-            }
-
-            for (String channel : channels) {
-                if (!filters.containsKey(channel)) continue;
-                filters.get(channel).add(new EmojiReplacer(emojiSequences, caseInsensitive));
-            }
+            return webhookMap;
         }
-
-        return filters;
     }
 
-    /**
-     * Returns a map of Discord webhook URLs for each channel
-     *
-     * @param configFile The configuration file
-     * @return A map of webhook URLs for each channel
-     */
-    private Map<String, URL> fetchWebhookUrls(@NotNull YamlDocument configFile) {
-        final Map<String, URL> webhookUrls = new HashMap<>();
-        try {
-            if (configFile.contains("discord.channel_webhooks")) {
-                for (String channelID : configFile.getSection("discord.channel_webhooks").getRoutesAsStrings(false)) {
-                    if (!channels.containsKey(channelID)) {
-                        continue;
-                    }
-                    webhookUrls.put(channelID, new URL(configFile.getString("discord.channel_webhooks." + channelID)));
-                }
-            }
-        } catch (MalformedURLException e) {
-            doDiscordIntegration = false;
-        }
-        return webhookUrls;
-    }
-
-    /**
-     * Returns a {@link java.util.Map} of servers to the default channel to enforce on that server
-     *
-     * @param configFile The proxy {@link YamlDocument}
-     * @return {@link java.util.Map} of servers and their default channels
-     */
-    private HashMap<String, String> getServerDefaultChannels(YamlDocument configFile) {
-        final HashMap<String, String> serverDefaults = new HashMap<>();
-        if (configFile.contains("server_default_channels")) {
-            for (String server : configFile.getSection("server_default_channels").getRoutesAsStrings(false)) {
-                String channelId = configFile.getString("server_default_channels." + server);
-                serverDefaults.put(server, channelId);
-            }
-        }
-        return serverDefaults;
-    }
-
-    /**
-     * Returns a {@link Set} of formatted command strings from a list
-     *
-     * @param rawCommands Raw commands prepended with {@code /}
-     * @return formatted set of command strings
-     */
-    private List<String> getCommandsFromList(List<String> rawCommands) {
-        List<String> commands = new ArrayList<>();
-        for (String command : rawCommands) {
-            commands.add(command.substring(1));
-        }
-        return commands;
-    }
-
-    /**
-     * Clears the chat filters and disposes of the existing ProfanityFilter
-     */
-    private void clearChatFilters() {
-        chatFilters = new HashMap<>();
-    }
-
-    /**
-     * Returns the aliases from a list of aliases
-     *
-     * @param aliases The alias list
-     * @return The actual command aliases
-     */
-    public String[] getAliases(List<String> aliases) {
-        if (aliases.size() <= 1) {
-            return new String[0];
-        }
-        String[] aliasList = new String[aliases.size() - 1];
-        for (int i = 1; i < aliases.size(); i++) {
-            aliasList[i - 1] = aliases.get(i);
-        }
-        return aliasList;
-    }
+    @Comment("Custom names to display wherever you use the \"%server%\" placeholder instead of their default name")
+    private Map<String, String> serverNameReplacement = new HashMap<>();
 
     @NotNull
-    public String getLanguage() {
-        return language;
-    }
-
-    public boolean doCheckForUpdates() {
-        return checkForUpdates;
-    }
-
-    public boolean doPlaceholderAPI() {
-        return doPlaceholderAPI;
-    }
-
-    public long getPapiProxyBridgeCacheTime() {
-        return papiProxyBridgeCacheTime;
-    }
-
-    @NotNull
-    public String getDefaultChannel() {
-        return defaultChannel;
-    }
-
-    @NotNull
-    public Map<String, String> getServerDefaultChannels() {
-        return serverDefaultChannels;
-    }
-
-    @NotNull
-    public Map<String, Channel> getChannels() {
-        return channels;
-    }
-
-    @NotNull
-    public String getChannelLogFormat() {
-        return channelLogFormat;
-    }
-
-    @NotNull
-    public List<String> getChannelCommandAliases() {
-        return channelCommandAliases;
-    }
-
-    public boolean isDoMessageCommand() {
-        return doMessageCommand;
-    }
-
-    public boolean doGroupMessages() {
-        return doGroupMessages;
-    }
-
-    public int getMaxGroupMessageSize() {
-        return maxGroupMessageSize;
-    }
-
-    @NotNull
-    public List<String> getMessageCommandAliases() {
-        return messageCommandAliases;
-    }
-
-    @NotNull
-    public List<String> getReplyCommandAliases() {
-        return replyCommandAliases;
-    }
-
-    @NotNull
-    public String getInboundMessageFormat() {
-        return inboundMessageFormat;
-    }
-
-    @NotNull
-    public String getOutboundMessageFormat() {
-        return outboundMessageFormat;
-    }
-
-    @NotNull
-    public String getGroupInboundMessageFormat() {
-        return groupInboundMessageFormat;
-    }
-
-    @NotNull
-    public String getGroupOutboundMessageFormat() {
-        return groupOutboundMessageFormat;
-    }
-
-    public boolean doLogPrivateMessages() {
-        return logPrivateMessages;
-    }
-
-    public boolean isCensorPrivateMessages() {
-        return censorPrivateMessages;
-    }
-
-    @NotNull
-    public String getMessageLogFormat() {
-        return messageLogFormat;
-    }
-
-    @NotNull
-    public List<String> getMessageCommandRestrictedServers() {
-        return messageCommandRestrictedServers;
-    }
-
-    public boolean doSocialSpyCommand() {
-        return doSocialSpyCommand;
-    }
-
-    @NotNull
-    public String getSocialSpyFormat() {
-        return socialSpyFormat;
-    }
-
-    @NotNull
-    public String getSocialSpyGroupFormat() {
-        return socialSpyGroupFormat;
-    }
-
-    @NotNull
-    public List<String> getSocialSpyCommandAliases() {
-        return socialSpyCommandAliases;
-    }
-
-    public boolean doLocalSpyCommand() {
-        return doLocalSpyCommand;
-    }
-
-    @NotNull
-    public String getLocalSpyFormat() {
-        return localSpyFormat;
-    }
-
-    /**
-     * Returns if a channel is excluded from local spy messages
-     *
-     * @param channel {@link Channel} to check
-     * @return {@code true} if the channel should be excluded from /localspy; {@code false} otherwise
-     */
-    public boolean isLocalSpyChannelExcluded(@NotNull Channel channel) {
-        for (String excludedChannel : excludedLocalSpyChannels) {
-            if (excludedChannel.equals(channel.getId())) {
-                return true;
-            }
-        }
-        return false;
-    }
-
-    @NotNull
-    public List<String> getLocalSpyCommandAliases() {
-        return localSpyCommandAliases;
-    }
-
-    public boolean isDoBroadcastCommand() {
-        return doBroadcastCommand;
-    }
-
-    @NotNull
-    public List<String> getBroadcastCommandAliases() {
-        return broadcastCommandAliases;
-    }
-
-    @NotNull
-    public String getBroadcastMessageFormat() {
-        return broadcastMessageFormat;
-    }
-
-    public boolean doLogBroadcasts() {
-        return logBroadcasts;
-    }
-
-    @NotNull
-    public String getBroadcastLogFormat() {
-        return broadcastLogFormat;
-    }
-
-    public boolean doJoinMessages() {
-        return doJoinMessages;
-    }
-
-    @NotNull
-    public String getJoinMessageFormat() {
-        return joinMessageFormat;
-    }
-
-    public boolean doQuitMessages() {
-        return doQuitMessages;
-    }
-
-    @NotNull
-    public String getQuitMessageFormat() {
-        return quitMessageFormat;
-    }
-
-    @NotNull
-    public Channel.BroadcastScope getJoinQuitBroadcastScope() {
-        return joinQuitBroadcastScope;
-    }
-
-    @NotNull
-    public Map<String, List<ChatFilter>> getChatFilters() {
-        return chatFilters;
-    }
-
-    public boolean doDiscordIntegration() {
-        return doDiscordIntegration;
-    }
-
-    @NotNull
-    public Map<String, URL> getWebhookUrls() {
-        return webhookUrls;
-    }
-
-    @NotNull
-    public WebHook.Format getDiscordMessageFormat() {
-        return webhookFormat;
-    }
-
-    public boolean useSpicord() {
-        return useSpicord;
-    }
-
-    @NotNull
-    public String getDiscordUsernameFormat() {
-        return discordUsernameFormat;
-    }
-
-    @NotNull
-    public Map<String, String> getSpicordReceiveChannelMap() {
-        return spicordReceiveChannelMap;
-    }
-
-    @NotNull
-    public Map<String, String> getSpicordSendChannelMap() {
-        return spicordSendChannelMap;
-    }
-
-    @NotNull
-    public Map<String, String> getServerNameReplacement() {
-        return serverNameReplacement;
+    public static List<String> formatCommands(@NotNull List<String> rawCommands) {
+        return rawCommands.stream().map(c -> c.startsWith("/") ? c.substring(1) : c).toList();
     }
 }
